<resources>
    <string name="app_name">SteamPunked</string>
    <string name="start_button">Start Game</string>
    <string name="player1_label">Player1:</string>
    <string name="steam_punked_logo">Steam Punked logo</string>
    <string name="Player2_label">Player 2:</string>
    <string name="spinner_text">Select playing area size</string>
    <string name="btn_install">Install</string>
    <string name="btn_discard">Discard</string>
    <string name="btn_open_valve">Open Valve</string>
    <string name="btn_surrender">Surrender</string>
    <string name="msg_invalid_move">The pipe does not connect, move is invalid.</string>
    <string name="need_names">Please enter a name for both players.</string>
    <string name="lbl_now_playing">Now Playing:</string>
    <string name="surrender">Surrender</string>
    <string name="verify_surrender">Are you sure  you want to surrender?</string>
    <string name="lbl_game_size">Game Area Size:</string>
    <string name="winner_title">You\'re a Winner!</string>
    <string name="winner_message">Congratulations %1$s you won!</string>
    <string name="loser_title">You lose!</string>
    <string name="loser_message">Sorry %1$s you lost.</string>
    <string-array name="spinner_array">
        <item>5</item>
        <item>10</item>
        <item>20</item>
    </string-array>
</resources>