<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/steam_punked_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/splash" />

    <TextView
        android:id="@+id/label1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:labelFor="@id/TextPerson1Name"
        android:paddingStart="15dp"
        android:text="@string/player1_label"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView" />

    <EditText
        android:id="@+id/TextPerson1Name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:autofillHints="Player1"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@id/label1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/label1"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/label2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:labelFor="@id/TextPerson2Name"
        android:paddingStart="15dp"
        android:text="@string/Player2_label"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/label1"
        app:layout_constraintStart_toStartOf="@id/label1"
        app:layout_constraintTop_toBottomOf="@id/label1" />

    <EditText
        android:id="@+id/TextPerson2Name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="Player2"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@id/label2"
        app:layout_constraintEnd_toEndOf="@id/TextPerson1Name"
        app:layout_constraintStart_toEndOf="@id/label2"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:minHeight="48dp"
        android:paddingStart="15dp"
        android:text="@string/lbl_game_size"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="@id/label2"
        app:layout_constraintStart_toStartOf="@id/label2"
        app:layout_constraintTop_toBottomOf="@id/label2" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:contentDescription="@string/spinner_text"
        android:minHeight="48dp"
        app:layout_constraintStart_toEndOf="@id/textView2"
        app:layout_constraintTop_toTopOf="@id/textView2" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:onClick="onStart"
        android:text="@string/start_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinner" />

</androidx.constraintlayout.widget.ConstraintLayout>